# consolida_contadoria

./: Metas - 2024.csv  Metas - 2025.csv  README.md  consolidaTudo.py  cosolidacao.py  load_consolidacao;py  meta.csv  meta.py  pyproject.toml  token.json
data_custas_liquidacao/: Central de Contadoria - TJPE - Núcleos de custas - CONSOLIDACAO.csv  Central de Contadoria - TJPE - Núcleos de liquidação - CONSOLIDACAO.csv  Central de Contadoria - TJPE - Núcleos de liquidação - Consolidação.csv
data_transform/: Consolidado.xlsx  final_tempo_real.xlsx
