[tool.poetry]
name = "contadoria1"
version = "0.1.0"
description = ""
authors = ["Fasri <felipear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
openpyxl = "^3.1.5"
pydrive = "^1.3.1"
pydrive2 = "^1.21.3"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.158.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
